Began adding terms to glossary and created a bare bones project index.

--- a/01_dirgha/DA.29.html
+++ b/01_dirgha/DA.29.html
@@ -3,17 +3,21 @@
   <link rel="stylesheet" href="../css/stylesheet.css"/>
 </head>
 <body class="sutra">
+<p class="navigation"><a href="../index.html">The Four Agamas</a> > <a href="contents.html">The Long Agamas</a> > 29. [Lohiccha]</p>
   <h2 class="en">29. [Lohiccha]</h2>
   <h2 class="ch">（二九）[9]佛說長阿含第三分[10]露遮經第十</h2>
 
-<p class="ch">[0112c21] 如是我聞： 一時，佛在拘薩羅<sup id="ch_r3"><a href="#ch_n3">3</a></sup>人間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提<sup id="ch_r4"><a href="#ch_n4">4</a></sup>婆羅門村北尸舍婆<sup id="ch_r5"><a href="#ch_n5">5</a></sup>林中止宿。</p>
+<p class="ch" id="DA.29.1ch">[0112c21] <a href="../X2_glossary/radical038.html#如是">如是</a><a href="../X2_glossary/radical062.html#我">我</a><a href="../X2_glossary/radical128.html#聞">聞</a>： 一時，佛在拘薩羅國<sup id="ch_r3"><a href="#ch_n3">3</a></sup>人間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提<sup id="ch_r4"><a href="#ch_n4">4</a></sup>婆羅門村北尸舍婆<sup id="ch_r5"><a href="#ch_n5">5</a></sup>林中止宿。</p>
 
 <p class="en">Thus I have heard: One time, the Buddha was in Kośala, touring among the people. He was accompanied by an assembly of 1,250 great monks, and they went to the brahmin town of Sālavatikā north of [Sishava Grove] where they stopped.</p>
 
 <p class="ch">[0112c23] 時，有婆羅門，名曰露遮，住[＊]婆羅林中，其村豐樂，人民熾盛。[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀。異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。</p>
-<p class="ch">聞沙門瞿曇釋種子出家成道，於拘薩羅國人間遊行，至尸舍[＊]婆林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」</p>
 
 <p class="en">There was a brahmin then named [Lohiccha] who was staying in the Sala Grove. His town was bountiful and happy, and the people prospered. King Prasenajit was [conducting business] in this town accompanied with a brahmin who was considered to be a limb of Brahma. This brahmin had descended from seven generations of fathers and mothers who were proper, so no one criticized him. He chanted the three divisions of the other scriptures and fully understood them. He could entirely discern the various sutras and texts. He was also skilled at the way of the great man's signs, could tell fortunes, and oversaw the ritual ceremonies.</p>
+
+<p class="ch">聞沙門瞿曇釋種子出家成道，於拘薩羅國人間遊行，至尸舍[＊]婆林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」</p>
+
+
 <p class="en">He heard that the mendicant Gautama, the son of the Sakya clan, who had left the home life and achieved awakening was touring among the people of Kosala and had arrived in [Sishava Grove]. This Gautama had a great reputation that was heard throughout the world. He was a Tathagata, Arhat, and Perfectly Awakened One who had perfected the ten epithets. Among gods, worldly men, demons, or assemblies of Mara's devas, mendicants, and brahmins, he had realized for himself and taught the teaching to others that was good in the beginning, middle, and end, that was perfect in meaning and manner, and that was the purification of the religious life. "I ought to go and have an audience with such a true man as this. I would like to go and pay him a visit."</p>
 
 <p class="ch">[0113a06] 時，婆羅門即出彼村，詣尸舍婆林中，至世尊所，問訊已，一面坐。佛為說法，示教利喜，婆羅門聞法已，白佛言：「唯願世尊及諸大眾明受我請。」爾時，世尊默然受請。</p>
@@ -47,74 +51,92 @@
 <p class="ch">[0113c13] 佛言：「露遮！猶如有人捨己禾稼，鋤他田苗，此則名為貪濁惡法。是為三師可以自誡。是為賢聖戒、律戒、[＊]儀戒、時戒。露遮！有一世尊不在世間，不可傾動，云何為一？若如來、至真、等正覺出現於世，乃至得三明，除滅無明，生智慧明，去諸闇冥，出大法光，所謂漏盡智證。所以者何？斯由精勤，專念不忘，樂獨閑居之所得也。露遮！是為第一世尊不在世間，不可傾動。露遮！有四沙門果。何者四？謂[13]須陀洹果、[14]斯陀含果、[15]阿那含果、[16]阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」</p>
 
 <p class="ch">[0113c25] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0113c26] 又問：「若不得果，得生天不？」</p>
 
 <p class="ch">[0113c26] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0113c27] 又問：「遮他說法，使不得果，不得生天。為是善心，為不善心耶？」</p>
 
 <p class="ch">[0113c28] 答曰：「不善。」</p>
+<p class="en">"Unwholesome."</p>
 
 <p class="ch">[0113c28] 又問：「不善心者，為生善趣，為墮惡趣？」</p>
 
 <p class="ch">[0113c29] 答曰：「生惡趣。」</p>
+<p class="en">"Born to an unpleasant destiny."</p>
 
 <p class="ch">[0114a01] 「露遮！猶如有人語波斯匿王言：『王所有國土，其中財物王盡自用，勿給餘人。』云何？露遮！若用彼人言者，當斷餘人供不？」</p>
 
 <p class="ch">[0114a03] 答曰：「當斷。」</p>
+<p class="en">"They'll stop them."</p>
 
 <p class="ch">[0114a04] 又問：「斷他供者，為是善心，為不善心？」</p>
 
 <p class="ch">[0114a05] 答曰：「不善心。」</p>
+<p class="en">"An unwholesome mind."</p>
 
 <p class="ch">[0114a05] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
 
 <p class="ch">[0114a06] 答曰：「墮惡道。」</p>
+<p class="en">"Fall to an unpleasant destiny."</p>
 
 <p class="ch">[0114a06] 「露遮！彼亦如是，有人聞法，應得四沙門果。若有人言：『勿為說法。』設用其言者，彼人聞法得果不？」</p>
 
 <p class="ch">[0114a08] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0114a09] 又問：「若不得果，得生天不？」</p>
 
 <p class="ch">[0114a09] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0114a10] 又[1]問：「遮他說法，使不得道果，不得生天。彼為是善心，為不善心耶？」</p>
 
 <p class="ch">[0114a11] 答曰：「不善。」</p>
+<p class="en">"Unwholesome."</p>
 
 <p class="ch">[0114a12] 又問：「不善心者，當生善趣，[2]為墮惡道耶？」</p>
 
 <p class="ch">[0114a13] 答曰：「墮惡道。」</p>
+<p class="en">"Fall to an unpleasant destiny."</p>
 
 <p class="ch">[0114a13] 「露遮！若有人語汝言：『彼[3]波羅婆提[4]村封所有財物。露遮！自用勿給人，物當自用，與他何為？』云何？露遮！設用彼言者，當斷餘人供不？」</p>
 
 <p class="ch">[0114a16] 答曰：「當斷。」</p>
+<p class="en">"They'll stop them."</p>
 
 <p class="ch">[0114a16] 又問：「教人斷他供者，為是善心，為不善心耶？」</p>
 
 <p class="ch">[0114a17] 答曰：「不善。」</p>
+<p class="en">"Unwholesome."</p>
 
 <p class="ch">[0114a18] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
 
 <p class="ch">[0114a19] 答曰：「墮惡道。」</p>
+<p class="en">"Fall to an unpleasant destiny."</p>
 
 <p class="ch">[0114a19] 「露遮！彼亦如是，有人聞法應得四沙門果，若有人言：『勿為說法。』設用其言者，彼人聞法得果不？」</p>
 
 <p class="ch">[0114a21] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0114a22] 又問：「若不得果，得生天不？」</p>
 
 <p class="ch">[0114a22] 答曰：「不得。」</p>
+<p class="en">"They won't attain it."</p>
 
 <p class="ch">[0114a22] 又問：「遮他說法，使不得果，不得生天。為是善心，為不善心耶？」</p>
 
 <p class="ch">[0114a24] 答曰：「不善。」</p>
+<p class="en">"Unwholesome."</p>
 
 <p class="ch">[0114a24] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
 
 <p class="ch">[0114a25] 答[5]曰：「墮惡道。」</p>
+<p class="en">"Fall to an unpleasant destiny."</p>
 
 <p class="ch">[0114a26] 爾時，露遮婆羅門白佛言：「我歸依佛，歸依法，歸依僧，願聽我於正法中為優婆塞，自今已後，盡形壽不殺、不盜、不婬、不欺、不飲酒。」</p>
 
@@ -124,7 +146,7 @@
 
 <h2>Endnotes</h2>
 <ol class="notes">
-  <li id="ch_n3">羅＋（國）【宋】【元】【明】[<a href="#ch_r3">back</a>]</li>
+  <li id="ch_n3">羅＋（國）【宋】【元】【明】. 國 is added to the transliteration throughout <em>DA</em>, so emended for consistency. [<a href="#ch_r3">back</a>]</li>
   <li id="ch_n4">婆羅婆提＝娑羅婆提【宋】【明】＊～Sālavatikā.
  [<a href="#ch_r4">back</a>]</a>
  <li id="ch_n5">婆＝娑【明】＊ [＊ 1 2 3 4 5] [<a href="#ch_r5">back</a>]
