--- a/01_dirgha/contents.html
+++ b/01_dirgha/contents.html
@@ -56,7 +56,7 @@
     </li>
     <li>Pali Parallels</li>
     <li>Index</li>
-    <li>Glossary</li>
+    <li><a href="../X2_glossary/index.html">Glossary</a></li>
   </ul>
 </body>
 </html>
