--- a/X2_glossary/index.html
+++ b/X2_glossary/index.html
@@ -3,223 +3,234 @@
 <title>Chinese-English Glossary | Index</title>
 <link rel="stylesheet" href="../css/stylesheet.css"/>
 </head>
-<body>
-<h2>一</h2>
-<h2>丨</h2>
-<h2>丶</h2>
-<h2>丿</h2>
-<h2>乙</h2>
-<h2>亅</h2>
-<h2>二</h2>
-<h2>亠</h2>
-<h2>人</h2>
-<h2>儿</h2>
-<h2>入</h2>
-<h2>八</h2>
-<h2>冂</h2>
-<h2>冖</h2>
-<h2>冫</h2>
-<h2>几</h2>
-<h2>凵</h2>
-<h2>刀</h2>
-<h2>力</h2>
-<h2>勹</h2>
-<h2>匕</h2>
-<h2>匚</h2>
-<h2>匸</h2>
-<h2>十</h2>
-<h2>卜</h2>
-<h2>卩</h2>
-<h2>厂</h2>
-<h2>厶</h2>
-<h2>又</h2>
-<h2>口</h2>
-<h2>囗</h2>
-<h2>土</h2>
-<h2>士</h2>
-<h2>夂</h2>
-<h2>夊</h2>
-<h2>夊</h2>
-<h2>夕</h2>
-<h2>大</h2>
-<h2>女</h2>
-<h2>子</h2>
-<h2>宀</h2>
-<h2>寸</h2>
-<h2>小</h2>
-<h2>尢</h2>
-<h2>尸</h2>
-<h2>屮</h2>
-<h2>山</h2>
-<h2>川</h2>
-<h2>工</h2>
-<h2>己</h2>
-<h2>巾</h2>
-<h2>干</h2>
-<h2>幺</h2>
-<h2>广</h2>
-<h2>廴</h2>
-<h2>廾</h2>
-<h2>弋</h2>
-<h2>弓</h2>
-<h2>彑</h2>
-<h2>彡</h2>
-<h2>彳</h2>
-<h2>心 忄</h2>
-<h2>戈</h2>
-<h2>戸</h2>
-<h2>手 扌</h2>
-<h2>支</h2>
-<h2>攴</h2>
-<h2>攵</h2>
-<h2>文</h2>
-<h2>斗</h2>
-<h2>斤</h2>
-<h2>方</h2>
-<h2>无</h2>
-<h2>日</h2>
-<h2>曰</h2>
-<h2>月</h2>
-<h2>木</h2>
-<h2>欠</h2>
-<h2>止</h2>
-<h2>歹</h2>
-<h2>殳</h2>
-<h2>毋</h2>
-<h2>比</h2>
-<h2>毛</h2>
-<h2>氏</h2>
-<h2>气</h2>
-<h2>水 氵</h2>
-<h2>火 灬</h2>
-<h2>爪</h2>
-<h2>父</h2>
-<h2>爻</h2>
-<h2>爿</h2>
-<h2>片</h2>
-<h2>牙</h2>
-<h2>牛</h2>
-<h2>犬</h2>
-<h2>玄</h2>
-<h2>玉 王</h2>
-<h2>瓜</h2>
-<h2>瓦</h2>
-<h2>甘</h2>
-<h2>生</h2>
-<h2>用</h2>
-<h2>田</h2>
-<h2>疋</h2>
-<h2>疒</h2>
-<h2>癶</h2>
-<h2>白</h2>
-<h2>皮</h2>
-<h2>皿</h2>
-<h2>目</h2>
-<h2>矛</h2>
-<h2>矢</h2>
-<h2>石</h2>
-<h2>示</h2>
-<h2>禸</h2>
-<h2>禾</h2>
-<h2>穴</h2>
-<h2>立</h2>
-<h2>竹</h2>
-<h2>米</h2>
-<h2>糸</h2>
-<h2>缶</h2>
-<h2>网　罒　罓</h2>
-<h2>羊</h2>
-<h2>羽</h2>
-<h2>老</h2>
-<h2>而</h2>
-<h2>耒</h2>
-<h2>耳</h2>
-<h2>聿</h2>
-<h2>肉</h2>
-<h2>月</h2>
-<h2>臣</h2>
-<h2>自</h2>
-<h2>至</h2>
-<h2>臼</h2>
-<h2>舌</h2>
-<h2>舛</h2>
-<h2>舟</h2>
-<h2>艮</h2>
-<h2>色</h2>
-<h2>艸</h2>
-<h2>虍</h2>
-<h2>虫</h2>
-<h2>血</h2>
-<h2>行</h2>
-<h2>衣</h2>
-<h2>西</h2>
-<h2>見</h2>
-<h2>角</h2>
-<h2>言</h2>
-<h2>谷</h2>
-<h2>豆</h2>
-<h2>豕</h2>
-<h2>豸</h2>
-<h2>貝</h2>
-<h2>赤</h2>
-<h2>走</h2>
-<h2>足</h2>
-<h2>身</h2>
-<h2>車</h2>
-<h2>辛</h2>
-<h2>辰</h2>
-<h2>辵辶</h2>
-<h2>邑</h2>
-<h2>酉</h2>
-<h2>釆</h2>
-<h2>里</h2>
-<h2>金</h2>
-<h2>長</h2>
-<h2>門</h2>
-<h2>阜</h2>
-<h2>隶</h2>
-<h2>隹</h2>
-<h2>雨</h2>
-<h2>青</h2>
-<h2>非</h2>
-<h2>面</h2>
-<h2>革</h2>
-<h2>韋</h2>
-<h2>韭</h2>
-<h2>音</h2>
-<h2>頁</h2>
-<h2>風</h2>
-<h2>飛</h2>
-<h2>食</h2>
-<h2>首</h2>
-<h2>香</h2>
-<h2>馬</h2>
-<h2>骨</h2>
-<h2>高</h2>
-<h2>髟</h2>
-<h2>鬥</h2>
-<h2>鬯</h2>
-<h2>鬲</h2>
-<h2>鬼</h2>
-<h2>魚</h2>
-<h2>鳥</h2>
-<h2>鹵</h2>
-<h2>鹿</h2>
-<h2>麥</h2>
-<h2>麻</h2>
-<h2>黄</h2>
-<h2>黍</h2>
-<h2>黒</h2>
-<h2>黹</h2>
-<h2>黽</h2>
-<h2>鼎</h2>
-<h2>鼓</h2>
-<h2>鼠</h2>
-<h2>鼻</h2>
-<h2>齊</h2>
-<h2>齒</h2>
-<h2>龍</h2>
-<h2>龜</h2>
-<h2>龠</h2>
+<body class="glossary_index">
+<p class="navigation"><a href="../index.html">The Four Agamas</a> > Chinese-English Glossary</p>
+<h1>Chinese-English Glossary of the Four Agamas</h1>
+<hr/>
+<section class="rad_index">
+<p><strong>1</strong>: <a href="#rad001">一</a> <a href="#rad002">丨</a> <a href="#rad003">丶</a> <a href="#rad004">丿</a> <a href="#rad005">乙</a> <a href="#rad006">亅</a> <strong>2</strong>: 二 亠 人 儿 入 八 冂 冖 冫 几 凵 刀 力 勹 匕 匚 匸 十 卜 卩 厂 厶 又 <strong>3</strong>: 口 囗 土 士 夂 夊 夕 大 <a href="#rad038">女</a> 子 宀 寸 小 尢 尸 屮 山 川 工 己 巾 干 幺 广 廴 廾 弋 弓 彑 彡 彳 <strong>4</strong>: 心 忄 <a href="#rad062">戈</a> 戸 手 扌 支 攴 攵 文 斗 斤 方 无 日 曰 月 木 欠 止 歹 殳 毋 比 毛 氏 气 水　氵 火　灬 爪 父 爻 爿 片 牙 牛 犬 <strong>5</strong>: 玄 玉　王 瓜 瓦 甘 生 用 田 疋 疒 癶 白 皮 皿 目 矛 矢 石 示 禸 禾 穴 立 <strong>6</strong>: 竹 米 糸 缶 网　罒　罓 羊 羽 老 而 耒 耳 聿 肉　月 臣 自 至 臼 舌 舛 舟 艮 色 艸 虍 虫 血 行 衣 西 <strong>7</strong>: 見 角 言 谷 豆 豕 豸 貝 赤 走 足 身 車 辛 辰 辵　辶 邑 酉 釆 里 <strong>8</strong>: 金 長 門 阜 隶 隹 雨 青 非 <strong>9</strong>: 面 革 韋 韭 音 頁 風 飛 食 首 香 <strong>10</strong>: 馬 骨 高 髟 鬥 鬯 鬲 鬼 <strong>11</strong>: 魚 鳥 鹵 鹿 麥 麻 <strong>12</strong>: 黄 黍 黒 黹 <strong>13</strong>: 黽 鼎 <strong>14</strong>: 鼓 鼠 鼻 齊 <strong>15+</strong>: 齒 龍 龜 龠</p>
+</section>
+<hr/>
+<h2 id="rad001">一</h2>
+<h2 id="rad002">丨</h2>
+<h2 id="rad003">丶</h2>
+<h2 id="rad004">丿</h2>
+<h2 id="rad005">乙</h2>
+<h2 id="rad006">亅</h2>
+<h2 id="rad007">二</h2>
+<h2 id="rad008">亠</h2>
+<h2 id="rad009">人</h2>
+<h2 id="rad010">儿</h2>
+<h2 id="rad011">入</h2>
+<h2 id="rad012">八</h2>
+<h2 id="rad013">冂</h2>
+<h2 id="rad014">冖</h2>
+<h2 id="rad015">冫</h2>
+<h2 id="rad016">几</h2>
+<h2 id="rad017">凵</h2>
+<h2 id="rad018">刀</h2>
+<h2 id="rad019">力</h2>
+<h2 id="rad020">勹</h2>
+<h2 id="rad021">匕</h2>
+<h2 id="rad022">匚</h2>
+<h2 id="rad023">匸</h2>
+<h2 id="rad024">十</h2>
+<h2 id="rad025">卜</h2>
+<h2 id="rad026">卩</h2>
+<h2 id="rad027">厂</h2>
+<h2 id="rad028">厶</h2>
+<h2 id="rad029">又</h2>
+<h2 id="rad030">口</h2>
+<h2 id="rad">囗</h2>
+<h2 id="rad">土</h2>
+<h2 id="rad">士</h2>
+<h2 id="rad">夂</h2>
+<h2 id="rad">夊</h2>
+<h2 id="rad">夊</h2>
+<h2 id="rad">夕</h2>
+<h2 id="rad">大</h2>
+<h2 id="rad038"><a href="radical038.html">女</a></h2>
+<p>3: <a href="radical038.html#_如">如</a> </p>
+<h2 id="rad">子</h2>
+<h2 id="rad">宀</h2>
+<h2 id="rad">寸</h2>
+<h2 id="rad">小</h2>
+<h2 id="rad">尢</h2>
+<h2 id="rad">尸</h2>
+<h2 id="rad">屮</h2>
+<h2 id="rad">山</h2>
+<h2 id="rad">川</h2>
+<h2 id="rad">工</h2>
+<h2 id="rad">己</h2>
+<h2 id="rad">巾</h2>
+<h2 id="rad">干</h2>
+<h2 id="rad">幺</h2>
+<h2 id="rad">广</h2>
+<h2 id="rad">廴</h2>
+<h2 id="rad">廾</h2>
+<h2 id="rad">弋</h2>
+<h2 id="rad">弓</h2>
+<h2 id="rad">彑</h2>
+<h2 id="rad">彡</h2>
+<h2 id="rad">彳</h2>
+<h2 id="rad">心 忄</h2>
+<h2 id="rad062"><a href="radical062.html">戈</a></h2>
+<p>3: <a href="radical062.html#_我">我</a></p>
+<h2 id="rad">戸</h2>
+<h2 id="rad">手 扌</h2>
+<h2 id="rad">支</h2>
+<h2 id="rad">攴</h2>
+<h2 id="rad">攵</h2>
+<h2 id="rad">文</h2>
+<h2 id="rad">斗</h2>
+<h2 id="rad">斤</h2>
+<h2 id="rad">方</h2>
+<h2 id="rad">无</h2>
+<h2 id="rad">日</h2>
+<h2 id="rad">曰</h2>
+<h2 id="rad">月</h2>
+<h2 id="rad">木</h2>
+<h2 id="rad">欠</h2>
+<h2 id="rad">止</h2>
+<h2 id="rad">歹</h2>
+<h2 id="rad">殳</h2>
+<h2 id="rad">毋</h2>
+<h2 id="rad">比</h2>
+<h2 id="rad">毛</h2>
+<h2 id="rad">氏</h2>
+<h2 id="rad">气</h2>
+<h2 id="rad">水 氵</h2>
+<h2 id="rad">火 灬</h2>
+<h2 id="rad">爪</h2>
+<h2 id="rad">父</h2>
+<h2 id="rad">爻</h2>
+<h2 id="rad">爿</h2>
+<h2 id="rad">片</h2>
+<h2 id="rad">牙</h2>
+<h2 id="rad">牛</h2>
+<h2 id="rad">犬</h2>
+<h2 id="rad">玄</h2>
+<h2 id="rad">玉 王</h2>
+<h2 id="rad">瓜</h2>
+<h2 id="rad">瓦</h2>
+<h2 id="rad">甘</h2>
+<h2 id="rad">生</h2>
+<h2 id="rad">用</h2>
+<h2 id="rad">田</h2>
+<h2 id="rad">疋</h2>
+<h2 id="rad">疒</h2>
+<h2 id="rad">癶</h2>
+<h2 id="rad">白</h2>
+<h2 id="rad">皮</h2>
+<h2 id="rad">皿</h2>
+<h2 id="rad">目</h2>
+<h2 id="rad">矛</h2>
+<h2 id="rad">矢</h2>
+<h2 id="rad">石</h2>
+<h2 id="rad">示</h2>
+<h2 id="rad">禸</h2>
+<h2 id="rad">禾</h2>
+<h2 id="rad">穴</h2>
+<h2 id="rad">立</h2>
+<h2 id="rad">竹</h2>
+<h2 id="rad">米</h2>
+<h2 id="rad">糸</h2>
+<h2 id="rad">缶</h2>
+<h2 id="rad">网　罒　罓</h2>
+<h2 id="rad">羊</h2>
+<h2 id="rad">羽</h2>
+<h2 id="rad">老</h2>
+<h2 id="rad">而</h2>
+<h2 id="rad">耒</h2>
+<h2 id="rad128">耳</h2>
+<p>8: <a href="radical128.html#_聞">聞</a></p>
+<h2 id="rad">聿</h2>
+<h2 id="rad">肉</h2>
+<h2 id="rad">月</h2>
+<h2 id="rad">臣</h2>
+<h2 id="rad">自</h2>
+<h2 id="rad">至</h2>
+<h2 id="rad">臼</h2>
+<h2 id="rad">舌</h2>
+<h2 id="rad">舛</h2>
+<h2 id="rad">舟</h2>
+<h2 id="rad">艮</h2>
+<h2 id="rad">色</h2>
+<h2 id="rad">艸</h2>
+<h2 id="rad">虍</h2>
+<h2 id="rad">虫</h2>
+<h2 id="rad">血</h2>
+<h2 id="rad">行</h2>
+<h2 id="rad">衣</h2>
+<h2 id="rad">西</h2>
+<h2 id="rad">見</h2>
+<h2 id="rad">角</h2>
+<h2 id="rad">言</h2>
+<h2 id="rad">谷</h2>
+<h2 id="rad">豆</h2>
+<h2 id="rad">豕</h2>
+<h2 id="rad">豸</h2>
+<h2 id="rad">貝</h2>
+<h2 id="rad">赤</h2>
+<h2 id="rad">走</h2>
+<h2 id="rad">足</h2>
+<h2 id="rad">身</h2>
+<h2 id="rad">車</h2>
+<h2 id="rad">辛</h2>
+<h2 id="rad">辰</h2>
+<h2 id="rad">辵辶</h2>
+<h2 id="rad">邑</h2>
+<h2 id="rad">酉</h2>
+<h2 id="rad">釆</h2>
+<h2 id="rad">里</h2>
+<h2 id="rad">金</h2>
+<h2 id="rad">長</h2>
+<h2 id="rad169">門</h2>
+<p>6: <a href="radical128.html#_聞">聞</a></p>
+<h2 id="rad">阜</h2>
+<h2 id="rad">隶</h2>
+<h2 id="rad">隹</h2>
+<h2 id="rad">雨</h2>
+<h2 id="rad">青</h2>
+<h2 id="rad">非</h2>
+<h2 id="rad">面</h2>
+<h2 id="rad">革</h2>
+<h2 id="rad">韋</h2>
+<h2 id="rad">韭</h2>
+<h2 id="rad">音</h2>
+<h2 id="rad">頁</h2>
+<h2 id="rad">風</h2>
+<h2 id="rad">飛</h2>
+<h2 id="rad">食</h2>
+<h2 id="rad">首</h2>
+<h2 id="rad">香</h2>
+<h2 id="rad">馬</h2>
+<h2 id="rad">骨</h2>
+<h2 id="rad">高</h2>
+<h2 id="rad">髟</h2>
+<h2 id="rad">鬥</h2>
+<h2 id="rad">鬯</h2>
+<h2 id="rad">鬲</h2>
+<h2 id="rad">鬼</h2>
+<h2 id="rad">魚</h2>
+<h2 id="rad">鳥</h2>
+<h2 id="rad">鹵</h2>
+<h2 id="rad">鹿</h2>
+<h2 id="rad">麥</h2>
+<h2 id="rad">麻</h2>
+<h2 id="rad">黄</h2>
+<h2 id="rad">黍</h2>
+<h2 id="rad">黒</h2>
+<h2 id="rad">黹</h2>
+<h2 id="rad">黽</h2>
+<h2 id="rad">鼎</h2>
+<h2 id="rad">鼓</h2>
+<h2 id="rad">鼠</h2>
+<h2 id="rad">鼻</h2>
+<h2 id="rad">齊</h2>
+<h2 id="rad">齒</h2>
+<h2 id="rad">龍</h2>
+<h2 id="rad">龜</h2>
+<h2 id="rad">龠</h2>
 </body>
 </html>
