Added another glossary entry and worked on navigation elements on translation page.

--- a/X2_glossary/index.html
+++ b/X2_glossary/index.html
@@ -12,6 +12,7 @@
 </section>
 <hr/>
 <h2 id="rad001">一</h2>
+<p>1: <a href="radical001.html#_一">一</a></p>
 <h2 id="rad002">丨</h2>
 <h2 id="rad003">丶</h2>
 <h2 id="rad004">丿</h2>
