--- a/01_dirgha/DA.29.html
+++ b/01_dirgha/DA.29.html
@@ -3,13 +3,39 @@
   <link rel="stylesheet" href="../css/stylesheet.css"/>
 </head>
 <body class="sutra">
-<p class="navigation"><a href="../index.html">The Four Agamas</a> > <a href="contents.html">The Long Agamas</a> > 29. [Lohiccha]</p>
+<nav class="left">
+	<h2>The Four Agamas</h2>
+	<ul class="top">
+		<li>Introduction</li>
+		<li>Translations</li>
+			<ul class="submenu">
+				<li>The Long Agamas</li>
+				<li>The Middle-Length Agamas</li>
+				<li>The Numeretical Agamas</li>
+				<li>The Connected Agamas</li>
+				<li>Other Minor Texts</li>
+			</ul>
+		<li>The Teachings of the Agamas</li>
+		<li>Index of Pali Equivalents</li>
+		<li>Chinese-English Glossary</li>
+	</ul>
+</nav>
+
+<nav class="top">
+	<ul>
+		<li>< Previous</li>
+		<li>The Long Agamas</li>
+		<li>Next ></li>
+	</ul>
+</nav>
+
+<section>
   <h2 class="en">29. [Lohiccha]</h2>
   <h2 class="ch">（二九）[9]佛說長阿含第三分[10]露遮經第十</h2>
 
-<p class="ch" id="DA.29.1ch">[0112c21] <a href="../X2_glossary/radical038.html#如是">如是</a><a href="../X2_glossary/radical062.html#我">我</a><a href="../X2_glossary/radical128.html#聞">聞</a>： 一時，佛在拘薩羅國<sup id="ch_r3"><a href="#ch_n3">3</a></sup>人間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提<sup id="ch_r4"><a href="#ch_n4">4</a></sup>婆羅門村北尸舍婆<sup id="ch_r5"><a href="#ch_n5">5</a></sup>林中止宿。</p>
+<p class="ch" id="DA.29.1ch">[0112c21] <a href="../X2_glossary/radical038.html#如是">如是</a><a href="../X2_glossary/radical062.html#我">我</a><a href="../X2_glossary/radical128.html#聞">聞</a>： <a href="../X2_glossary/radical001.html#一時">一時</a>，佛在拘薩羅國<sup id="ch_r3"><a href="#ch_n3">3</a></sup>人間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提婆羅門村北尸舍婆林中止宿。</p>
 
-<p class="en">Thus I have heard: One time, the Buddha was in Kośala, touring among the people. He was accompanied by an assembly of 1,250 great monks, and they went to the brahmin town of Sālavatikā north of [Sishava Grove] where they stopped.</p>
+<p class="en">Thus I have heard: One time, the Buddha was in Kośala, touring among the people. He was accompanied by an assembly of 1,250 great monks, and they went to the brahmin town of Sālavatī north of [Sishava Grove] where they stopped.</p>
 
 <p class="ch">[0112c23] 時，有婆羅門，名曰露遮，住[＊]婆羅林中，其村豐樂，人民熾盛。[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀。異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。</p>
 
@@ -147,10 +173,10 @@
 <h2>Endnotes</h2>
 <ol class="notes">
   <li id="ch_n3">羅＋（國）【宋】【元】【明】. 國 is added to the transliteration throughout <em>DA</em>, so emended for consistency. [<a href="#ch_r3">back</a>]</li>
-  <li id="ch_n4">婆羅婆提＝娑羅婆提【宋】【明】＊～Sālavatikā.
- [<a href="#ch_r4">back</a>]</a>
- <li id="ch_n5">婆＝娑【明】＊ [＊ 1 2 3 4 5] [<a href="#ch_r5">back</a>]
+  <li id="ch_n4"> [<a href="#ch_r4">back</a>]</a>
+ <li id="ch_n5"> [<a href="#ch_r5">back</a>]
 </li>
 </ol>
+</section>
 </body>
 </html>
