--- a/01_dirgha/DA.29.html
+++ b/01_dirgha/DA.29.html
@@ -4,7 +4,6 @@
 </head>
 <body class="sutra">
 <nav class="left">
-	<h2>The Four Agamas</h2>
 	<ul class="top">
 		<li>Introduction</li>
 		<li>Translations</li>
@@ -23,15 +22,19 @@
 
 <nav class="top">
 	<ul>
-		<li>< Previous</li>
-		<li>The Long Agamas</li>
-		<li>Next ></li>
+		<li class="left">< Previous</li>
+		<li class="title">The Four Agamas</li>
+		<li class="right">Next ></li>
+	</ul>
+	<ul>
+		<li class="subtitle">The Long Agamas: 29. [Lohiccha]</li>
 	</ul>
 </nav>
 
 <section>
+	<h2 class="ch">（二九）[9]佛說長阿含第三分[10]露遮經第十</h2>
   <h2 class="en">29. [Lohiccha]</h2>
-  <h2 class="ch">（二九）[9]佛說長阿含第三分[10]露遮經第十</h2>
+  
 
 <p class="ch" id="DA.29.1ch">[0112c21] <a href="../X2_glossary/radical038.html#如是">如是</a><a href="../X2_glossary/radical062.html#我">我</a><a href="../X2_glossary/radical128.html#聞">聞</a>： <a href="../X2_glossary/radical001.html#一時">一時</a>，佛在拘薩羅國<sup id="ch_r3"><a href="#ch_n3">3</a></sup>人間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提婆羅門村北尸舍婆林中止宿。</p>
 
