Implemented layouts and includes, worked on navigation, header design, added more radical files.

--- a/01_dirgha/introduction.html
+++ b/01_dirgha/introduction.html
@@ -1,1 +1,4 @@
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaa aaaaaaaaaaa aaaaaaaaa
+---
+layout: default
+title: The Long Agamas | Introduction
+---
