--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
-﻿<html>
-<head>
-<title>Chinese-English Glossary | Index</title>
-<link rel="stylesheet" href="css/stylesheet.css"/>
-</head>
-<body>
-<p class="navigation"><a href="../index.html">The Four Agamas</a></p>
+---
+layout: default
+title: The Four Agamas | Home
+---
 
-<h1>The Four Agamas</h1>
-
-<h2>Translations</h2>
-<ul class="toc">
-	<li><a href="01_dirgha/contents.html">The Long Agamas</a></li>
-	<ol start="29">
-		<li><a href="01_dirgha/DA.29.html">[Lohiccha]</a></li>
-	</ol>
-	<li>The Middle-Length Agamas</li>
-	<li>The Numeretical Agamas</li>
-	<li>The Connected Agamas</li>
-</ul>
-<h2>The Teachings of the Four Agamas</h2>
-<h2><a href="X2_glossary/index.html">A Chinese-English Glossary of the Four Agamas</a></h2>
-
-</body>
-</html>
+<article class="home">
+	<h2>Introduction</h2>
+		<ul>
+			<li>About this Project</li>
+			<li>The Chinese Agamas and Pali Nikayas</li>
+			<li>The Translators of the Agamas</li>
+			<li>Further Reading</li>
+		</ul>
+	<h2>English Translations</h2>
+		<ul>
+			<li><a href="01_dirgha/contents.html">The Long Agamas</a></li>
+			<ol start="29">
+				<li><a href="01_dirgha/DA.29.html">*Lohitya</a></li>
+			</ol>
+			<li>The Middle-Length Agamas</li>
+			<li>The Numeretical Agamas</li>
+			<li>The Connected Agamas</li>
+			<li>The Minor Agamas</li>
+		</ul>
+	<h2>The Teachings of the Chinese Agamas</h2>
+		<ul>
+			<li>The Buddha's Dharma</li>
+			<li>The Buddha's Vinaya</li>
+			<li>The Buddha's Disciples</li>
+			<li>Comparing the Agamas to the Nikayas</li>
+		</ul>
+	<h2><a href="X2_glossary/index.html">A Chinese-English Glossary of the Four Agamas</a></h2>
+</article>
