--- a/X2_glossary/radical001.html
+++ b/X2_glossary/radical001.html
@@ -12,6 +12,6 @@ title: Chinese-English Glossary | Radical 001 一
   <p><span class="term" lang="ch">一時</span>
     (Skt. ekaṃ samayam)
     n. <em>one time</em>.
-    Usage: 如是我聞:一時 "Thus I have heard: one time..." <em>DA passim</em>.</p>
+    Usage: 如是我聞:一時 “Thus I have heard: one time...” <em>DA passim</em>.</p>
 </section>
 </article>
