Transitioned to using data files and layouts to dynamically generate glossary pages.

--- a/X2_glossary/index.html
+++ b/X2_glossary/index.html
@@ -7,7 +7,17 @@ title: Chinese-English Glossary of the Agamas
 <h1>Appendix II: Chinese-English Glossary</h1>
 <hr/>
 <section class="rad_index">
-<p><strong>1</strong>: <a title="001" href="#rad001">一</a> <a title="002" href="#rad002">丨</a> <a title="003" href="#rad003">丶</a> <a title="004" href="#rad004">丿</a> <a title="005" href="#rad005">乙</a> <a title="006" href="#rad006">亅</a> <strong>2</strong>: <a title="007" href="#rad007">二</a> 亠 <a href="#rad009">人</a> 儿 入 八 冂 冖 冫 几 凵 刀 力 勹 匕 匚 匸 十 卜 卩 厂 厶 又 <strong>3</strong>: 口 囗 <a title="032" href="#rad032">土</a> 士 夂 夊 夕 大 <a title="038" href="#rad038">女</a> 子 宀 寸 小 尢 <a title="044" href="#rad044">尸</a> 屮 山 川 工 己 巾 干 幺 广 廴 廾 弋 弓 彑 彡 彳 <strong>4</strong>: 心 忄 <a title="062" href="#rad062">戈</a> 戸 <a title="064" href="#rad064">手 扌</a> 支 攴 攵 文 斗 斤 方 无 日 曰 月 木 欠 止 歹 殳 毋 比 毛 氏 气 水　氵 火　灬 爪 父 爻 爿 片 牙 牛 犬 <strong>5</strong>: 玄 玉　王 瓜 瓦 甘 生 用 田 疋 疒 癶 白 皮 皿 目 矛 矢 石 示 禸 禾 穴 立 <strong>6</strong>: <a title="118" href="#rad118">竹</a> 米 糸 缶 网　罒　罓 羊 羽 老 而 耒 耳 聿 肉　月 臣 自 至 臼 舌 舛 舟 艮 色 艸 虍 虫 血 行 衣 西 <strong>7</strong>: 見 角 言 谷 豆 豕 豸 貝 赤 走 足 身 車 辛 辰 辵　辶 邑 酉 釆 里 <strong>8</strong>: 金 長 門 阜 隶 隹 <a title="173" href="#rad173">雨</a> 青 非 <strong>9</strong>: 面 革 韋 韭 音 頁 風 飛 食 首 香 <strong>10</strong>: 馬 骨 高 髟 鬥 鬯 鬲 鬼 <strong>11</strong>: 魚 鳥 鹵 鹿 麥 麻 <strong>12</strong>: 黄 黍 黒 黹 <strong>13</strong>: 黽 鼎 <strong>14</strong>: 鼓 鼠 鼻 齊 <strong>15+</strong>: 齒 龍 龜 龠</p>
+  <p>
+  {% assign last_strokes = 0 %}
+  {% for rad in site.data.glossary.radicals %}
+    {% assign current_strokes = rad.strokes %}
+    {% if current_strokes > last_strokes %}
+      <strong>{{ current_strokes }}</strong>:
+      {% assign last_strokes = current_strokes %}
+    {% endif %}
+    <a title="{{ rad.number }}" href="#rad{{ rad.number }}">{{ rad.cjk }}</a>
+  {% endfor %}
+  </p>
 </section>
 <hr/>
 <h2 id="rad001">一</h2>
