--- a/X2_glossary/radical032.html
+++ b/X2_glossary/radical032.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Chinese-English Glossary | Radical 032 土
+number: "032"
+radical: 土
+data: radical032
 ---
 
 <article class="radical-page">
