Various interface improvements, separated translation and html generation, etc.

--- a/01_dirgha/DA.29.html
+++ b/01_dirgha/DA.29.html
@@ -1,190 +1,8 @@
 ---
 layout: default
-title: The Long Agamas | 29. *Lohitya
+title: The Long Agamas | 29. Lohitya
+type: translation
+en: DA_29_en_Lohitya
+ch: DA_29_ch_Lohitya
 gloss: <a href="../X2_glossary/radical
 ---
-
-<article class="sutra">
-	<h2 lang="ch" id="ch.0">（{{ page.gloss }}007.html#二九">二九</a>）{{ page.gloss }}118.html#第三">第三</a>{{ page.gloss }}018.html#分">分</a>{{ page.gloss }}173.html#露遮經">露遮經</a>{{ page.gloss }}118.html#第十">第十</a></h2>
-  <h2 lang="en" id="en.0">29. *Lohitya</h2>
-
-
-<p lang="ch" id="ch.1">{{ page.gloss }}038.html#如是">如是</a>{{ page.gloss }}062.html#我">我</a>{{ page.gloss }}128.html#聞">聞</a>： {{ page.gloss }}001.html#一時">一時</a>，{{ page.gloss }}009.html#佛">佛</a>{{ page.gloss }}032.html#在">在</a>{{ page.gloss }}064.html#拘薩羅國">拘薩羅國</a><sup id="ch_r3">1</sup>{{ page.gloss }}009.html#人">人</a>間遊行。與大比丘眾千二百五十人俱，往詣婆羅婆提婆羅門村北{{ page.gloss }}044.html#尸舍婆林">尸舍婆林</a>中止宿。</p>
-
-<ol class="notes">
-	<li id="ch_n1"><span lang="ch">羅＋（國）【宋】【元】【明】. 國</span> is added to this transliteration elsewhere in <em>DA</em>, so I've emended for consistency.</li>
-</ol>
-
-<p lang="en" id="en.1">1. Thus I have heard: One time, the Buddha was in Kauśala touring among the people. He was accompanied by an assembly of 1,250 great monks, and they went to the brahmin town of Sālavatī and stopped to rest to the north in a śiṃśapā grove.</p>
-
-<p lang="ch" id="ch.2">時，有婆羅門，名曰露遮，住婆羅林中，其村豐樂，人民熾盛。波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世已來父母真正，不為他人之所輕毀。異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、瞻候吉凶、祭祀儀禮。</p>
-
-<p lang="en" id="en.2">2. There was a brahmin then named *Lohitya<sup>1</sup> who was staying in a śāla grove. His town was bountiful and happy, and the people prospered. King Prasenajit had awarded this town to that brahmin as his brahmin due.<sup>2</sup> This brahmin was descended from seven generations of fathers and mothers who were proper, so he wasn’t criticized by others. He chanted and fully understood the three divisions of the other canon, and he could entirely discern the various kinds of scriptures. He was also skilled in the way of the great man’s signs, divining fortune and misfortune, and the sacrifices and rituals.<sup>3</sup></p>
-
-<ol class="notes">
-	<li><em>*Lohitya</em>. The Sanskrit name Lohitya is attested in the Sarvâstivāda Dīrghâgama; however, many Central Asian texts give his name as Lokecca. The Chinese transliteration only indicates the first and last syllable ("lo" and "cha").</li>
-	<li><em>Brahmin quarter</em> is probably a translation of brahma-deya, which refers to gifts made to the brahmin caste by rulers and others.</li>
-	<li>Rather than describe Lohiyta’s virtues, the Pali text immediately states the wrong view that will drive his conflict with the Buddha. cf. DN.12.2.</li>
-</ol>
-
-<p lang="ch" id="ch.3">聞沙門瞿曇釋種子出家[113a]成道，於拘薩羅國人間遊行，至尸舍婆林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」</p>
-
-<p lang="en" id="en.3">3. He heard that the mendicant Gautama of the Śākya clan who had left the home life <span class="taishoref">[113a]</span> and achieved awakening was touring among the people of Kauśala and had arrived in a śiṃśapā grove. <span class="added">This Gautama</span> had a great reputation that was heard throughout the world. He was a Tathāgata, an Arhat, and a Perfectly Awakened One fully endowed with the ten epithets. Among gods, worldly men, and demons or the assemblies of Māra's gods, mendicants, and brahmins, he had himself become realized and taught the Dharma to others. It was good in the beginning, middle, and end, complete in meaning and manner, and the purification of the religious life. “I ought to go and have an audience with such a true man as this. I would like to go and pay him a visit now.”<sup>1</sup></p>
-
-<ol class="notes">
-	<li>In the Pali, Lohicca sends his barber both to invite the Buddha and let him know when it's time to come. This removes the context for Lohitya's wrong view, which may be why the Pali mentions it before this sequence of events.</li>
-</ol>
-
-<p lang="ch" id="ch.4">時，婆羅門即出彼村，詣尸舍婆林中，至世尊所，問訊已，一面坐。佛為說法，示教利喜，婆羅門聞法已，白佛言：「唯願世尊及諸大眾明受我請。」爾時，世尊默然受請。</p>
-<!-- raw draft from here -->
-<p lang="en" id="en.4">4. That brahmin then left his village and went to visit the Bhagavān in that śiṃśapā grove. After making polite inquiries, he sat to one side. The Buddha taught the Dharma for him, clearly teaching it with intelligence adnd joy. After that brahmin heard the Dharma, he said to the Buddha, “May the Bhagavān and the great assemblies clearly accept my invitation.” The Bhagavān then accepted his invitation silently.</p>
-
-<p lang="ch" id="ch.5">彼婆羅門見佛默然，知已許可，即從坐起，遶佛而去。去佛不遠，便起惡見言：「諸沙門、婆羅門多知善法，多所證成，不應為他人說，但自知，休與他說為。譬如有人壞故獄已，更造新獄，斯是貪惡不善法耳。」</p>
-
-<p lang="en" id="en.5">5. That brahmin saw that the Buddha was silent. Once he knew that he had <span class="added">the Buddha's</span> assent, he rose from his seat, circled the Buddha, and left. Not far from the Buddha, an evil view occurred to him. “Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn't teach it for other people. Knowing it themselves, they desist from giving teachings to others. It's like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!”</p>
-
-<p lang="ch" id="ch.6">時，婆羅門還至[＊]婆羅林已，即於其夜具辦種種餚饍飲食。時到，語剃頭師言：「汝持我聲，[1]詣尸舍[＊]婆林中，白沙門瞿曇：『日時已到，宜知是[2]時。』」</p>
-
-<p lang="en" id="en.6">6. After the brahmin had returned to the sala grove, that night he prepared a variety of delicious food and drink. When they came, he said to his barber, "Take my words to the simsapa grove and tell the mendicant Gautama, 'Once daytime has arrived, you ought to know it's time.'"</p>
-
-<p lang="ch" id="ch.7">[0113a18] 剃頭師受教即[3]行，往到佛所，禮世尊足白：「時已到，宜知[4]是時。」</p>
-
-<p lang="en" id="en.7">7. His barber accepted and performed his instructions. He went to the Buddha and bowed at the Bhagavan's feet. "Once the day has come, you ought to know that its time."</p>
-
-<p lang="ch" id="ch.8">爾時，世尊即著衣持鉢，從諸弟子千二百五十人俱，詣[＊]婆羅林。</p>
-
-<p lang="en" id="en.8">8. The Bhagavan then put on his robe and took his bown to the sala grove along with his 1,250 disciples.</p>
-
-<p lang="ch" id="ch.9">剃頭師侍從世尊，偏露右臂，長跪叉手，白佛言：「彼露遮婆羅門去佛不遠，生惡見言：『諸有沙門、婆羅門多知善法，多所證者，不應為他人說，但自知，休與他說為。譬如有人壞故獄已，更造新獄，斯是貪惡不善法耳。』唯願世尊除其惡見。」</p>
-
-<p lang="en" id="ch.9">9. The barber followed the Bhagavan by his right side, saluted him with his palms together, and said, "That brahmin *Lohitya had this wrong view arise not far away when he left the Buddha: '“Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn't teach it for other people. Knowing it themselves, they desist from giving teachings to others. It's like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!”' May the Bhagavan remove his evil view."</p>
-
-<p lang="ch" id="ch.10">佛告剃頭師曰：「此是小事，易開化耳。」</p>
-
-<p lang="en" id="en.10">10. The Buddha told the barber, "This is only a minor matter that's easily changed."</p>
-
-<p lang="ch" id="ch.11">[0113a27] 爾時，世尊至婆羅門舍，就座而坐。時，婆羅門以種種甘饍，手自斟酌，供佛及僧，食訖去鉢，行澡水畢，取一小牀於佛前坐。佛告露遮：「汝[5]昨去我不遠，生惡見言：『諸沙門、婆羅門多知善法，多所證者，不應為他人說，乃至貪惡不善法。』實有是言耶？」</p>
-
-<p lang="en" id="en.11">11. Then, the Bhagavan arrived at the brahmin's resdience, prepared a seat, and sat down. The brahmin personally served them various delicious foods, providing it for the Buddha and the samgha. When they finished the meal, they left their bowls and went to wash. They got a small sofa for the Buddha to sit in front. The Buddha then told Lohitya, "Yesterday, not long after you left, you had an evil view: 'Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn't teach it for other people. Knowing it themselves, they desist from giving teachings to others. It's like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!' Is it true that you said that?"</p>
-
-<p lang="ch" id="ch.12">露遮言：「爾，實有此事。」</p>
-<p lang="en" id="en.12">12. Lohitya said, "Yes, it's true that this happened."</p>
-
-<p lang="ch" id="ch.13">佛告露遮：「汝勿復爾生此惡見。所以者何？世有三師可以自誡。云何為三？一者剃除鬚髮，服三法衣，出家修道，於現法中可[6]以除煩惱，又可增益得上人法。而於現法中不除煩惱，不得上人法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。露遮！[7]彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，得上人勝法。而今於現法中不能除煩惱，不得上人勝法。己業未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」</p>
-<p lang="en" id="en.13">The Buddha told Lohitya, "Don't let this wrong view arise again. Why is that? There are three teachers in the world who can give their own instructions. What are the three? One is head-shaven who wear three Dharma robes and leave home to cultivate the path. Here in the present, they can remove the afflictions, and they can increase the attainment of higher human teachings."</p>
-
-<p lang="ch" id="ch.12">[0113b16] 佛言：「露遮！猶如有人壞故獄已，更造新獄，斯則名為貪濁惡法。是為一師可以自誡。是為賢聖戒、律戒、[8]儀戒、時戒。」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0113b19] 又告露遮：「第二師者，剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，[9]不可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人勝法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。露遮！彼諸弟子語師言：『[10]師今剃除鬚髮，服三法衣，出家修道，於現法中[11]得除眾煩惱，得上人法。而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0113b29] 佛言：「露遮！猶如有人在他後行，手摩他背，此則名為貪濁惡法。是為二師可以自誡。是為賢聖戒、律戒、[＊]儀戒、時戒。」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0113c03] 又告露遮：「第三師者，剃除鬚髮，服三法衣，出家修道，於現法中可除煩惱，又可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，其諸弟子恭敬承事，依止[12]同住。露遮！彼諸弟子語師言：『[＊]師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，少多得上人法，而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，諸弟子恭敬承事，共止同住。』」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0113c13] 佛言：「露遮！猶如有人捨己禾稼，鋤他田苗，此則名為貪濁惡法。是為三師可以自誡。是為賢聖戒、律戒、[＊]儀戒、時戒。露遮！有一世尊不在世間，不可傾動，云何為一？若如來、至真、等正覺出現於世，乃至得三明，除滅無明，生智慧明，去諸闇冥，出大法光，所謂漏盡智證。所以者何？斯由精勤，專念不忘，樂獨閑居之所得也。露遮！是為第一世尊不在世間，不可傾動。露遮！有四沙門果。何者四？謂[13]須陀洹果、[14]斯陀含果、[15]阿那含果、[16]阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0113c25] 答曰：「不得。」</p>
-<p lang="en">"They won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0113c26] 又問：「若不得果，得生天不？」</p>
-<p lang="en">"If he doesn't gain its fruit, does he gain birth in heaven?"</p>
-
-<p lang="ch" id="ch.12">[0113c26] 答曰：「不得。」</p>
-<p lang="en">"He won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0113c27] 又問：「遮他說法，使不得果，不得生天。為是善心，為不善心耶？」</p>
-<p lang="en">"He prevents others to teach Dharma, so they won't attain its fruit and won't gain birth in heaven. Is that a wholesome or an unwholesome thought?"</p>
-
-<p lang="ch" id="ch.12">[0113c28] 答曰：「不善。」</p>
-<p lang="en">"Unwholesome."</p>
-
-<p lang="ch" id="ch.12">[0113c28] 又問：「不善心者，為生善趣，為墮惡趣？」</p>
-<p lang="en">"Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?"</p>
-
-<p lang="ch" id="ch.12">[0113c29] 答曰：「生惡趣。」</p>
-<p lang="en">"Born to an unpleasant destiny."</p>
-
-<p lang="ch" id="ch.12">[0114a01] 「露遮！猶如有人語波斯匿王言：『王所有國土，其中財物王盡自用，勿給餘人。』云何？露遮！若用彼人言者，當斷餘人供不？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a03] 答曰：「當斷。」</p>
-<p lang="en">"They'll stop them."</p>
-
-<p lang="ch" id="ch.12">[0114a04] 又問：「斷他供者，為是善心，為不善心？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a05] 答曰：「不善心。」</p>
-<p lang="en">"An unwholesome mind."</p>
-
-<p lang="ch" id="ch.12">[0114a05] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
-<p lang="en">"Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?"</p>
-
-<p lang="ch" id="ch.12">[0114a06] 答曰：「墮惡道。」</p>
-<p lang="en">"Fall to an unpleasant destiny."</p>
-
-<p lang="ch" id="ch.12">[0114a06] 「露遮！彼亦如是，有人聞法，應得四沙門果。若有人言：『勿為說法。』設用其言者，彼人聞法得果不？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a08] 答曰：「不得。」</p>
-<p lang="en">"They won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0114a09] 又問：「若不得果，得生天不？」</p>
-<p lang="en">"If he doesn't gain its fruit, does he attain birth in heaven?"</p>
-
-<p lang="ch" id="ch.12">[0114a09] 答曰：「不得。」</p>
-<p lang="en">"They won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0114a10] 又[1]問：「遮他說法，使不得道果，不得生天。彼為是善心，為不善心耶？」</p>
-<p lang="en">"He prevents others to teach Dharma, so they won't attain its fruit and won't gain birth in heaven. Is that a wholesome or an unwholesome thought?"</p>
-
-<p lang="ch" id="ch.12">[0114a11] 答曰：「不善。」</p>
-<p lang="en">"Unwholesome."</p>
-
-<p lang="ch" id="ch.12">[0114a12] 又問：「不善心者，當生善趣，[2]為墮惡道耶？」</p>
-<p lang="en">"Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?"</p>
-
-<p lang="ch" id="ch.12">[0114a13] 答曰：「墮惡道。」</p>
-<p lang="en">"Fall to an unpleasant destiny."</p>
-
-<p lang="ch" id="ch.12">[0114a13] 「露遮！若有人語汝言：『彼[3]波羅婆提[4]村封所有財物。露遮！自用勿給人，物當自用，與他何為？』云何？露遮！設用彼言者，當斷餘人供不？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a16] 答曰：「當斷。」</p>
-<p lang="en">"They'll stop them."</p>
-
-<p lang="ch" id="ch.12">[0114a16] 又問：「教人斷他供者，為是善心，為不善心耶？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a17] 答曰：「不善。」</p>
-<p lang="en">"Unwholesome."</p>
-
-<p lang="ch" id="ch.12">[0114a18] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
-<p lang="en">"Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?"</p>
-
-<p lang="ch" id="ch.12">[0114a19] 答曰：「墮惡道。」</p>
-<p lang="en">"Fall to an unpleasant destiny."</p>
-
-<p lang="ch" id="ch.12">[0114a19] 「露遮！彼亦如是，有人聞法應得四沙門果，若有人言：『勿為說法。』設用其言者，彼人聞法得果不？」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a21] 答曰：「不得。」</p>
-<p lang="en">"They won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0114a22] 又問：「若不得果，得生天不？」</p>
-<p lang="en">"If he doesn't gain its fruit, does he attain birth in heaven?"</p>
-
-<p lang="ch" id="ch.12">[0114a22] 答曰：「不得。」</p>
-<p lang="en">"He won't attain it."</p>
-
-<p lang="ch" id="ch.12">[0114a22] 又問：「遮他說法，使不得果，不得生天。為是善心，為不善心耶？」</p>
-<p lang="en">"He prevents others to teach Dharma, so they won't attain its fruit and won't gain birth in heaven. Is that a wholesome or an unwholesome thought?"</p>
-
-<p lang="ch" id="ch.12">[0114a24] 答曰：「不善。」</p>
-<p lang="en">"Unwholesome."</p>
-
-<p lang="ch" id="ch.12">[0114a24] 又問：「不善心者，為生善趣，為墮惡道耶？」</p>
-<p lang="en">"Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?"</p>
-
-<p lang="ch" id="ch.12">[0114a25] 答[5]曰：「墮惡道。」</p>
-<p lang="en">"Fall to an bad destiny."</p>
-
-<p lang="ch" id="ch.12">[0114a26] 爾時，露遮婆羅門白佛言：「我歸依佛，歸依法，歸依僧，願聽我於正法中為優婆塞，自今已後，盡形壽不殺、不盜、不婬、不欺、不飲酒。」</p>
-<p lang="en" id="en.11"></p>
-<p lang="ch" id="ch.12">[0114a29] 佛說法已，時，露遮婆羅門聞佛所說，歡喜奉行。</p>
-<p lang="en" id="en.11"></p>
-<h2 class="ch fascicle">[6]佛說長阿含經卷第十七</h2>
-</article>
