fixed relative links with a base url variable.

--- a/X2_glossary/index.html
+++ b/X2_glossary/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+type: default
 title: Chinese-English Glossary of the Agamas
+base: ../
 ---
-
 <article class="glossary">
 <h1>Appendix II: Chinese-English Glossary</h1>
 <hr/>
