--- a/X2_glossary/radical009.html
+++ b/X2_glossary/radical009.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 009 人
 number: "009"
 radical: 人
 data: radical009
+base: ../
 ---
