--- a/X2_glossary/radical032.html
+++ b/X2_glossary/radical032.html
@@ -1,9 +1,11 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 032 土
 number: "032"
 radical: 土
 data: radical032
+base: ../
 ---
 
 <article class="radical-page">
