--- a/X2_glossary/radical038.html
+++ b/X2_glossary/radical038.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 38 女
 number: "038"
 radical: 女
 data: radical038
+base: ../
 ---
