--- a/X2_glossary/radical044.html
+++ b/X2_glossary/radical044.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 044 尸
 number: "044"
 radical: 尸
 data: radical044
+base: ../
 ---
