--- a/X2_glossary/radical062.html
+++ b/X2_glossary/radical062.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 62 戈
 number: "062"
 radical: 戈
 data: radical062
+base: ../
 ---
