--- a/X2_glossary/radical118.html
+++ b/X2_glossary/radical118.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 118 竹
 number: "118"
 radical: 竹
 data: radical118
+base: ../
 ---
