--- a/X2_glossary/radical173.html
+++ b/X2_glossary/radical173.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 173 雨
 number: "173"
 radical:
 data: radical173
+base: ../
 ---
