--- a/X2_glossary/radical001.html
+++ b/X2_glossary/radical001.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-number: 001
+type: radicalpage
+number: '001'
 radical: 一
 data: radical001
 title: Chinese-English Glossary | Radical 001 一
+base: ../
 ---
