--- a/X2_glossary/radical007.html
+++ b/X2_glossary/radical007.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 number: "007"
 radical: 二
 data: radical007
 title: Chinese-English Glossary | Radical 007 二
+base: ../
 ---
