--- a/X2_glossary/radical018.html
+++ b/X2_glossary/radical018.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 018 刀
 number: "018"
 radical: 刀
 data: radical018
+base: ../
 ---
