--- a/X2_glossary/radical064.html
+++ b/X2_glossary/radical064.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 064 手 扌
 number: "064"
 radical: 手 扌
 data: radical064
+base: ../
 ---
