--- a/X2_glossary/radical128.html
+++ b/X2_glossary/radical128.html
@@ -1,7 +1,9 @@
 ---
 layout: default
+type: radicalpage
 title: Chinese-English Glossary | Radical 128 耳
 number: "128"
 radical: 耳
 data: radical128
+base: ../
 ---
